match server scripts with local env