@@ -1,2 +1,2 @@
 #!/bin/bash
-java -Xmx2G -XX:MaxPermSize=512M -jar forge-1.7.10-10.13.3.1403-1.7.10-universal.jar nogui
+java -Xmx3G -Xmx3G -XX:+UnlockExperimentalVMOptions -XX:+UseG1GC -XX:MaxGCPauseMillis=250 -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4 -XX:+AggressiveOpts -server -jar forge-1.7.10-10.13.4.1448-1.7.10-universal.jar nogui
